app/kubernetes/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: latam-challenge-api
  namespace: latam-challenge
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    name: latam-challenge-api
  selector:
    app: latam-challenge-api
