app/kubernetes/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: latam-challenge-ingress
  namespace: latam-challenge
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-rgex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/proxy-read-timeout: 600s
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 600s
    nginx.ingress.kubernetes.io/proxy-send-timeout: 600s
spec:
  rules:
  - http:
      paths:
        - pathType: ImplementationSpecific
          path: /
          backend:
            service:
              name: latam-challenge-api
              port:
                number: 80
